# LowLatency-AudioTransfer

./: .gitignore  LICENSE  README.md
AudioOverLAN/: README.md  build_log.txt  settings.gradle.kts
AudioOverLAN/app/: build.gradle.kts
AudioOverLAN/app/src/main/cpp/: CMakeLists.txt  aaudio_player.cpp  aaudio_recorder.cpp  lock_free_ring_buffer.h  native_opus.cpp  ring_buffer.h  rnnoise_wrapper.cpp
AudioOverLAN/gradle/: libs.versions.toml
AudioOverLAN/gradle/wrapper/: gradle-wrapper.properties
AudioTransfer/: AudioTransfer.slnx  README.md
AudioTransfer/AudioTransfer.CLI/: AudioTransfer.CLI.csproj  Program.cs
AudioTransfer/AudioTransfer.Core/: AudioTransfer.Core.csproj  GlobalUsings.cs
AudioTransfer/AudioTransfer.Core/Audio/: AudioConverter.cs  AudioEncoderEngine.cs  AudioResampler.cs  DriftManager.cs  IAudioCapture.cs  IAudioRecord.cs  MicDriverSidebandAgent.cs  PlayerPlaybackOrchestrator.cs  SystemAudioController.cs  WasapiManager.cs  WasapiPlayer.cs  WasapiTimedCapture.cs
AudioTransfer/AudioTransfer.Core/Buffers/: MicJitterBuffer.cs  UnsafeCircularBuffer.cs
AudioTransfer/AudioTransfer.Core/Codec/: OpusDecoderWrapper.cs  OpusEncoderWrapper.cs
AudioTransfer/AudioTransfer.GUI/: App.xaml  App.xaml.cs  AudioTransfer.GUI.csproj  AudioTransfer.GUI_u52uf0ok_wpftmp.csproj  LanguageManager.cs  LogWindow.xaml  LogWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ValueConverters.cs
AudioTransfer/AudioTransfer.Tests/: AudioTransfer.Tests.csproj
VirtualMicDriver/: README.md  VirtualMic.sln
VirtualMicDriver/Package/: VirtualMicPackage.vcxproj
(+275 files in other folders)
